# tic-tac-toe

./: CMakeLists.txt  README.md
include/: AssetsLoader.hpp  AssetsManager.hpp  Board.hpp  Field.hpp  Game.hpp  GameMode.hpp  Mark.hpp  PlayerTag.hpp  SDL_Exception.hpp
src/: AssetsManager.cpp  Board.cpp  Field.cpp  Game.cpp  Mark.cpp  main.cpp
